--- a/tests/pure.html
+++ b/tests/pure.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset='UTF-8'>
-<title>Core</title>
+<title>core-js-pure</title>
 <link rel='stylesheet' href='https://code.jquery.com/qunit/qunit-1.23.1.css'>
 <div id='qunit'></div>
 <div id='qunit-fixture'></div>
