--- a/tests/pure.html
+++ b/tests/pure.html
@@ -5,5 +5,7 @@
 <div id='qunit'></div>
 <div id='qunit-fixture'></div>
 <script src='https://code.jquery.com/qunit/qunit-1.23.1.js'></script>
-<script src='./bundles/qunit-helpers.js'></script>
+<script>
+  window.USE_FUNCTION_CONSTRUCTOR = true;
+</script>
 <script src='./bundles/pure.js'></script>
